--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
 	"version": "0.0.1",
 
 	"description": "Backbone plugin to make Backbone.Collection smarter. Consumes Link fields in the HTTP Response header to enable Web Linking between partial list resources.",
-	"homepage": "https://hongymagic.github.com/Backbone.LinkedCollection",
+	"homepage": "https://swestrich.github.com/Backbone.LinkedCollection",
 	"author": "David Hong <davidhong.code@gmail.com>",
 	"keywords": ["backbone", "backbone.js", "RFC5988", "collection"],
-	"repository": "git://github.com/hongymagic/Backbone.LinkedCollection",
+	"repository": "git://github.com/swestrich/Backbone.LinkedCollection",
 
 	"bugs": {
 		"mail": "davidhong.code@gmail.com",
@@ -17,7 +17,7 @@
 	"licenses": [
 		{
 			"type": "MIT",
-			"url": "https://github.com/hongymagic/Backbone.LinkedCollection/LICENSE"
+			"url": "https://github.com/swestrich/Backbone.LinkedCollection/LICENSE"
 		}
 	],
 
